tests/fixtures/valid/def.py
def a():  # Check 1
    pass

def a():  # Check 2
    pass

"""
Lorem ipsum dolor sit amet
"""
def a():  # Check 3
    pass

# Lorem ipsum dolor sit amet
def a():  # Check 4
    pass

if 1 == 1:  # Check 5
    def a():
        pass
elif 2 == 2:
    def a():
        pass
else:
    def a():
        pass

for a in [1, 2]:  # Check 6
    def a():
        pass
else:
    def a():
        pass

while True:  # Check 7
    def a():
        pass
else:
    def a():
        pass

try: # Check 8
    def a():
        pass
except Exception:
    def a():
        pass
