tests/fixtures/invalid/while-9.py
v = 1  # Check 1
while True:
    pass

while True:  # Check 2
    pass
while True:
    pass

v = 1  # Check 3
# Lorem ipsum dolor sit amet
while True:
    pass

v = 1  # Check 4
"""
Lorem ipsum dolor sit amet
"""
while True:
    pass

# Check 5
a = """
Multiline string assignment
"""
while True:
    pass

while True:  # Check 6
    v = 1
    while True:
        pass

while True:  # Check 7
    while True:
        pass
    while True:
        pass

print(1)  # Check 8
while True:
    pass

while True:  # Check 9
    pass
print(1)
